Closed
Bug 467162
Opened 17 years ago
Closed 17 years ago
uninitialized local variable warning in xpcwrappedjsclass.cpp
Categories
(Core :: XPConnect, defect, P1)
Core
XPConnect
Tracking
()
RESOLVED
FIXED
mozilla1.9.1b3
People
(Reporter: RyanVM, Assigned: bent.mozilla)
References
()
Details
(Keywords: fixed1.9.1, regression)
Attachments
(1 file)
|
954 bytes,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
c:\mozbuild\mozilla\js\src\xpconnect\src\xpcwrappedjsclass.cpp(302) : warning C4700: uninitialized local variable 'jsexception' used
Caused by the patch for bug 459790
| Reporter | ||
Updated•17 years ago
|
Assignee: general → nobody
Component: JavaScript Engine → XPConnect
QA Contact: general → xpconnect
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → bent.mozilla
Flags: blocking1.9.1?
Comment 1•17 years ago
|
||
This is likely to lead to crashes, blocking.
Flags: blocking1.9.1? → blocking1.9.1+
Keywords: regression
Priority: -- → P1
Target Milestone: --- → mozilla1.9.1b3
| Assignee | ||
Comment 2•17 years ago
|
||
I continue to hate this rooting stuff...
Attachment #350863 -
Flags: superreview?(jst)
Attachment #350863 -
Flags: review?(jst)
Updated•17 years ago
|
Attachment #350863 -
Flags: superreview?(jst)
Attachment #350863 -
Flags: superreview+
Attachment #350863 -
Flags: review?(jst)
Attachment #350863 -
Flags: review+
| Assignee | ||
Comment 4•17 years ago
|
||
Pushed changeset e437dc52b966 to mozilla-central.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
This may have caused Bug 468409
| Assignee | ||
Comment 6•17 years ago
|
||
Pushed changeset c6c957beb126 to mozilla-1.9.1.
Keywords: fixed1.9.1
| Assignee | ||
Comment 7•17 years ago
|
||
(In reply to comment #5)
> This may have caused Bug 468409
It didn't.
You need to log in
before you can comment on or make changes to this bug.
Description
•