Bug 467162 - 'uninitialized local variable warning in xpcwrappedjsclass.cpp'. r+sr=jst, a=blocking1.9.1